--- a/styles/partials/header.scss
+++ b/styles/partials/header.scss
@@ -179,7 +179,11 @@
 
 @media screen and (max-width : 400px){
 	.Mobile{
+		padding-top: 0;
+		padding-bottom: 0;
 		&-list{
+			padding: 0;
+			margin: 10px 0;
 			&-item{
 				margin-bottom: 5px;
 			}
