--- a/styles/partials/principal.scss
+++ b/styles/partials/principal.scss
@@ -53,6 +53,10 @@
 			position:static;
 			width: auto;
 			background-color: $white;
+
+			&-title{
+				font-size: 1.5em;
+			}
 		}
 	}
 	.Autor{
